Fix service page card infos z-index

--- a/wp-content/themes/revitta/sass/styles/_service-page.scss
+++ b/wp-content/themes/revitta/sass/styles/_service-page.scss
@@ -94,7 +94,7 @@
         padding-bottom: 10px;
         margin-left: 20px;
         position: absolute;
-        z-index: 1111;
+        z-index: 111;
         top: 0;
         margin-top: 5%;
         bottom: 0;
