--- a/wp-content/themes/revitta/style.css
+++ b/wp-content/themes/revitta/style.css
@@ -1201,7 +1201,7 @@ footer .copyright .float-end a {
   padding-bottom: 10px;
   margin-left: 20px;
   position: absolute;
-  z-index: 1111;
+  z-index: 111;
   top: 0;
   margin-top: 5%;
   bottom: 0;
